Mudando de threads tradicionais para threads virtuais com java puro